add verify
